# gslcpp

./: .ccls  .clang-format  .gitattributes  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  Makefile  README.md  build-gsl  dot  tests_cov-summary.txt  tests_cov.html  tests_cov.txt
.github/workflows/: doxygen-gh-pages.yml
cmake/: CodeCoverage.cmake
docs/: .gitignore  .include_in_repo  index.html
docs/html/: annotated.html  c-iface_8hpp.html  c-iface_8hpp__dep__incl.map  c-iface_8hpp__dep__incl.md5  c-iface_8hpp__incl.map  c-iface_8hpp__incl.md5  c-iface_8hpp_source.html  classes.html  classgsl_1_1vec__dynamic-members.html  classgsl_1_1vec__dynamic.html  classgsl_1_1vec__iterator-members.html  classgsl_1_1vec__iterator.html  classgsl_1_1vec__static-members.html  classgsl_1_1vec__static.html  classgsl_1_1vec__view-members.html  classgsl_1_1vec__view.html  classgsl_1_1vector__v-members.html  classgsl_1_1vector__v.html  classgsl_1_1vector__v__coll__graph.md5  classgsl_1_1vector__v__inherit__graph.map  conceptgsl_1_1vec__stor.html  concepts.html  dir_cc1dfcd4d753b3fec5c7ce978240eade.html  dir_cc1dfcd4d753b3fec5c7ce978240eade_dep.map  dir_cc1dfcd4d753b3fec5c7ce978240eade_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_type.html  graph_legend.html  graph_legend.md5  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  (+68 more)
docs/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_d.html  all_d.js  all_e.html  all_e.js  classes_0.html  classes_0.js  classes_1.html  classes_1.js  concepts_0.html  concepts_0.js  enums_0.html  enums_0.js  enumvalues_0.html  enumvalues_0.js  enumvalues_1.html  enumvalues_1.js  (+51 more)
examples/: CMakeLists.txt
examples/vector/: CMakeLists.txt  vector-example.cpp  vector-example.out
examples/vector-view/: CMakeLists.txt  vector-view-example.cpp  vector-view-example.out
html/: add-constant_8hpp.html  add-constant_8hpp__dep__incl.map  add-constant_8hpp__dep__incl.md5  add-constant_8hpp__incl.map  add-constant_8hpp__incl.md5  add-constant_8hpp_source.html  add_8hpp.html  add_8hpp__dep__incl.map  add_8hpp__dep__incl.md5  add_8hpp__incl.map  add_8hpp__incl.md5  add_8hpp_source.html  annotated.html  axpby_8hpp.html  axpby_8hpp__dep__incl.map  axpby_8hpp__dep__incl.md5  axpby_8hpp__incl.map  axpby_8hpp__incl.md5  axpby_8hpp_source.html  classes.html  classgsl_1_1v__iterator-members.html  classgsl_1_1v__iterator.html  classgsl_1_1v__stor-members.html  classgsl_1_1v__stor.html  classgsl_1_1v__stor_3_01T_01_4-members.html  classgsl_1_1v__stor_3_01T_01_4.html  classgsl_1_1v__stor__coll__graph.map  classgsl_1_1v__stor__coll__graph.md5  classgsl_1_1v__stor__inherit__graph.map  classgsl_1_1v__stor__inherit__graph.md5  classgsl_1_1v__view-members.html  classgsl_1_1v__view.html  classgsl_1_1v__view__inherit__graph.map  classgsl_1_1v__view__inherit__graph.md5  complex_8hpp.html  complex_8hpp__dep__incl.map  complex_8hpp__dep__incl.md5  complex_8hpp__incl.map  complex_8hpp__incl.md5  complex_8hpp_source.html  (+484 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  (+36 more)
include/gslcpp/: c-iface.hpp  doc.hpp  e-props.hpp  size-code.hpp  static-vector-complex.hpp  static-vector.hpp  vec-base.hpp  vec-iface.hpp  vec-iterator.hpp  vec-stor.hpp  vec-view.hpp  vec.hpp  vector-complex-view.hpp  vector-view.hpp  vector.hpp  vector_d.hpp  vector_s.hpp  vector_v.hpp  version.hpp  view-aux.hpp  view.hpp
include/gslcpp/c/: add-constant.hpp  add.hpp  axpby.hpp  compat.hpp  div.hpp  equal.hpp  fprintf.hpp  fread.hpp  fscanf.hpp  fwrite.hpp  get.hpp  iface.hpp  isneg.hpp  isnonneg.hpp  isnull.hpp  ispos.hpp  max-index.hpp  max.hpp  memcpy.hpp  min-index.hpp  min.hpp  minmax-index.hpp  minmax.hpp  mul.hpp  ptr.hpp  reverse.hpp  scale.hpp  set-all.hpp  set-basis.hpp  set-zero.hpp  set.hpp  sub.hpp  subvector.hpp  sum.hpp  swap-elements.hpp  swap.hpp  type-map.hpp  vector-view-array.hpp  vector-view.hpp  vector.hpp  (+3 more)
include/gslcpp/c/impl/: iface-double.hpp  iface-float.hpp  iface.hpp
include/gslcpp/doc/: d-v-iface.hpp  d-vector-view.hpp  d-vector.hpp  mainpage.hpp
include/gslcpp/impl/: vec-base-impl.hpp  vec-iface-impl.hpp  vec-impl.hpp
include/gslcpp/vec/: dyna.hpp  iface.hpp  iterator.hpp  stat.hpp  stor.hpp  v-dyna.hpp  v-iface.hpp  v-iterator.hpp  v-stat.hpp  v-stor.hpp  v-view.hpp  view.hpp
include/gslcpp/wrap/: add-constant.hpp  add.hpp  axpby.hpp  c-array.hpp  compat.hpp  complex.hpp  container.hpp  div.hpp  element.hpp  equal.hpp  fprintf.hpp  fread.hpp  free.hpp  fscanf.hpp  fwrite.hpp  get.hpp  imag.hpp  is-complex.hpp  isneg.hpp  isnonneg.hpp  isnull.hpp  ispos.hpp  max-index.hpp  max.hpp  memcpy.hpp  min-index.hpp  min.hpp  minmax-index.hpp  minmax.hpp  mul.hpp  ptr.hpp  real.hpp  reverse.hpp  scale.hpp  set-all.hpp  set-basis.hpp  set-zero.hpp  set.hpp  sub.hpp  subvector.hpp  (+7 more)
test/: CMakeLists.txt  static-vector-test.cpp  test-main.cpp  v-iface-test.cpp  v-iterator-test.cpp  vec-base-test.cpp  vec-iface-test.cpp  vec-iterator-test.cpp  vec-test.cpp  vector-test.cpp  vector-view-test.cpp
